# picnic-analyst-assistant

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  user-config.md.example
agents/: AGENT-COMMON.md  ANALYST.md  DESIGNER.md  ENGINEER.md  ORCHESTRATOR.md  PRESENTER.md  WRITER.md  index.yaml
commands/: add-agent.md  analyst.md  architect.md  costs.md  designer.md  engineer.md  excalidraw.md  gdrive.md  onboard-knowledge.md  perform.md  presenter.md  setup.md  tasks.md  writer.md
context/: picnic-business.md
knowledge/: INDEX.yaml  ads-attributes.md  agent-common.md  confluence-pages.md  dbt-model-design.md  diagrams-excalidraw.md  pr-dbt-models.md  reporting-dashboard.md  slack-messages.md  slides-pptx.md  sql-calcite.md  sql-snowflake.md
patterns/: add-agent.md  architect.md  onboard-knowledge.md  setup.md
skills/costs/: SKILL.md
skills/gdrive/: SKILL.md  gdrive.sh  gdrive_tool.py  pyproject.toml
skills/slides/: SKILL.md  pyproject.toml  slides.sh  slides_tool.py  thinkcell.sh  thinkcell_tool.py
tools/costs/: costs.py
